--- a/codepen/index.html
+++ b/codepen/index.html
@@ -14,7 +14,7 @@
   <div class="bar" id="blockBar">
     <table border="1">
     <tr> 
-      <td><a href="#" target="_blank" title="Search">search</a></td>
+      <td><a href="#" target="_blank" title="Search">search github test</a></td>
       <td><a href="#" target="_blank" title="News">News</a></td>
       <td>
         <a href="#" target="_blank" title="Stock Information">
